[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/Roboto.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[node name="Game" type="Node"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.5
margin_right = 85.5
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Main/VBoxContainer"]
margin_top = 249.0
margin_right = 171.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 1 )
text = "Power Push"

[node name="Start" type="Button" parent="UI/Main/VBoxContainer"]
margin_top = 305.0
margin_right = 171.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 1 )
text = "Start"

[node name="Instructions" type="Button" parent="UI/Main/VBoxContainer"]
margin_top = 367.0
margin_right = 171.0
margin_bottom = 409.0
custom_fonts/font = ExtResource( 1 )
text = "Instructions"

[node name="Credits" type="Button" parent="UI/Main/VBoxContainer"]
margin_top = 429.0
margin_right = 171.0
margin_bottom = 471.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"

[node name="Instructions" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Instructions"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.5
margin_right = 120.5
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="UI/Instructions/VBoxContainer"]
margin_top = 311.0
margin_right = 241.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 1 )
text = "Shoot the baddies"

[node name="Return" type="Button" parent="UI/Instructions/VBoxContainer"]
margin_top = 367.0
margin_right = 241.0
margin_bottom = 409.0
custom_fonts/font = ExtResource( 1 )
text = "Return"

[node name="Credits" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Credits"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -344.0
margin_right = 344.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Credits/VBoxContainer"]
margin_top = 319.0
margin_right = 688.0
margin_bottom = 355.0
custom_fonts/font = ExtResource( 1 )
text = "I made this game and I used the font Roboto I guess"

[node name="Return" type="Button" parent="UI/Credits/VBoxContainer"]
margin_top = 359.0
margin_right = 688.0
margin_bottom = 401.0
custom_fonts/font = ExtResource( 1 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="World"]
current = true

[node name="CSGBox" type="CSGBox" parent="World"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 0.1, 0, 0, -1.84174 )

[connection signal="pressed" from="UI/Main/VBoxContainer/Start" to="UI" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Main/VBoxContainer/Instructions" to="UI" method="_on_Instructions_pressed"]
[connection signal="pressed" from="UI/Main/VBoxContainer/Credits" to="UI" method="_on_Credits_pressed"]
[connection signal="pressed" from="UI/Instructions/VBoxContainer/Return" to="UI" method="_on_Return_pressed"]
[connection signal="pressed" from="UI/Credits/VBoxContainer/Return" to="UI" method="_on_Return_pressed"]
